--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ footer.is-hot::before { opacity: 1; }
     <div class="brand">Oracle System</div>    
     <div class="spacer"></div>    
     <nav class="nav" aria-label="Navegación"></nav>    
-    <div class="title">MAIN MENU</div>    
+    <div class="title">Podcast</div>    
   </header>    
 
   <!-- CONTENIDO CON VIDEOS -->      
