--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
+  <!-- ========TIEMPO======== -->
+  <!-- ==========================
+  MENSAJE ACTUALIZACIÓN
+  =========================== -->
+  
+  <script>
+  const fechaLimite = new Date(2025, 1);
+  const hoy = new Date();
+
+  if (hoy < fechaLimite) {
+    alert("");
+  }
+</script>
+  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
