--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <!-- ========TIEMPO======== -->
+     <!-- ========TIEMPO======== -->
   <!-- ==========================
   MENSAJE ACTUALIZACIÓN
   =========================== -->
   
   <script>
-  const fechaLimite = new Date(2025, 1);
-  const hoy = new Date();
+  const fechaLimiteUpdate = new Date(2025, 1);
+  const update = new Date();
 
-  if (hoy < fechaLimite) {
-    alert("");
+  if (update < fechaLimiteUpdate) {
+    alert("Test");
   }
-</script>
+  </script>
   
 <head>
   <meta charset="UTF-8" />
