--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   =========================== -->
   
   <script>
-  const fechaLimiteUpdate = new Date(2025, 1);
+  const fechaLimiteUpdate = new Date(2025, 11);
   const update = new Date();
 
   if (update < fechaLimiteUpdate) {
-    alert("Test");
+    alert("Se han corregido algunos bugs.");
   }
   </script>
   
