--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
   <!-- CONTENIDO CON VIDEOS -->
   <main>
     <div class="videos-container">
+      <iframe src="https://www.youtube.com/embed/Dyc2iCKtHlE" allowfullscreen></iframe>      
+      <iframe src="https://www.youtube.com/embed/ox2SbR3lwzU" allowfullscreen></iframe>      
       <iframe src="https://www.youtube.com/embed/KBc7rjqjhdA" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/Ndj_rE-d9pg" allowfullscreen></iframe>
     </div>
