--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   
 <head>
   <meta charset="UTF-8" />
+  <title>Podcast YouTube</title>
+  <link rel="icon" href="https://img.icons8.com/fluency/10000/browse-podcasts.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
   <style>
