--- a/index.html
+++ b/index.html
@@ -221,17 +221,17 @@
   <main>
     <div class="videos-container">
 
-      <iframe src="https://www.youtube.com/embed/GY5k0JVmuXg" allowfullscreen></iframe>      
-      <iframe src="https://www.youtube.com/embed/0rGwVNt3NKo" allowfullscreen></iframe>      
-      <iframe src="https://www.youtube.com/embed/Ca940_i2IIE" allowfullscreen></iframe>      
-      <iframe src="https://www.youtube.com/embed/7rMOXLc2uTk" allowfullscreen></iframe>      
-      <iframe src="https://www.youtube.com/embed/MNK6PeAaXj4" allowfullscreen></iframe>      
-      <iframe src="https://www.youtube.com/embed/0GcthsjN2mM" allowfullscreen></iframe>      
-      <iframe src="https://www.youtube.com/embed/Q7LA29nzP0s" allowfullscreen></iframe>              
-      <iframe src="https://www.youtube.com/embed/Dyc2iCKtHlE" allowfullscreen></iframe>      
-      <iframe src="https://www.youtube.com/embed/ox2SbR3lwzU" allowfullscreen></iframe>      
-      <iframe src="https://www.youtube.com/embed/KBc7rjqjhdA" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/Ndj_rE-d9pg" allowfullscreen></iframe>
+      <iframe loading="lazy"  src="https://www.youtube.com/embed/GY5k0JVmuXg" allowfullscreen></iframe>      
+      <iframe loading="lazy" src="https://www.youtube.com/embed/0rGwVNt3NKo" allowfullscreen></iframe>      
+      <iframe loading="lazy" src="https://www.youtube.com/embed/Ca940_i2IIE" allowfullscreen></iframe>      
+      <iframe loading="lazy" src="https://www.youtube.com/embed/7rMOXLc2uTk" allowfullscreen></iframe>      
+      <iframe loading="lazy" src="https://www.youtube.com/embed/MNK6PeAaXj4" allowfullscreen></iframe>      
+      <iframe loading="lazy" src="https://www.youtube.com/embed/0GcthsjN2mM" allowfullscreen></iframe>      
+      <iframe loading="lazy" src="https://www.youtube.com/embed/Q7LA29nzP0s" allowfullscreen></iframe>              
+      <iframe loading="lazy" src="https://www.youtube.com/embed/Dyc2iCKtHlE" allowfullscreen></iframe>      
+      <iframe loading="lazy" src="https://www.youtube.com/embed/ox2SbR3lwzU" allowfullscreen></iframe>      
+      <iframe loading="lazy" src="https://www.youtube.com/embed/KBc7rjqjhdA" allowfullscreen></iframe>
+      <iframe loading="lazy" src="https://www.youtube.com/embed/Ndj_rE-d9pg" allowfullscreen></iframe>
     </div>
   </main>
 
